# joystick_planner_navigation

./: README.md
joystick_planner/: CMakeLists.txt  README.md  package.xml
joystick_planner/src/: joystick_planner.cpp
joystick_planner_viz/: CMakeLists.txt  README.md  package.xml
joystick_planner_viz/conf/: joystick_planner_viz_rviz_ui.rviz
joystick_planner_viz/include/: jsp_rviz_ui.launch  viz.launch
joystick_planner_viz/src/: joystick_planner_viz.cpp
nav_stack_jsp/: CMakeLists.txt  README.md  package.xml
nav_stack_jsp/launch/: nav_stack_jackal_sim.launch  nav_stack_robotont_real.launch  nav_stack_robotont_sim.launch
nav_stack_jsp/launch/include/: amcl.launch  gmapping.launch
nav_stack_jsp/maps/: agri_world_map_test.yaml
nav_stack_jsp/params/: controllers.yaml  controllers_teb.yaml  dwa_params_test.yaml  ekf_params_robotont.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planners.yaml  recovery.yaml
nav_stack_jsp/params/odom_nav/: local_costmap_params.yaml
nav_stack_jsp/params/robotont_params/: costmap_common_params.yaml  costmap_common_params_dwa.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_dwa.yaml
nav_stack_jsp/scripts/: bash_bt_connect_ds4.sh  bash_connect_ds4.sh  bash_usb_connect_ds4.sh  goal_client.py  joystick_planner.py
speed_controller_jsp/: CMakeLists.txt  README.md  package.xml
speed_controller_jsp/src/: speed_controller.cpp
testing_grounds_jsp/: CMakeLists.txt  README.md  jackal_forest.launch  mock_forest_v5.world  package.xml  robotont_forest.launch  test_scenario_1.launch
testing_grounds_jsp/include/: robotont_spawn_urdf.launch  robotont_upload_description.launch  world_editor.launch
testing_grounds_jsp/launch/: manual_control.launch  robotont_forest.launch  test_scenario_1.launch
testing_grounds_jsp/meshes/: red_barrel.stl  simulated_obstacle.stl
testing_grounds_jsp/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  robotont_base_d435.urdf.xacro
testing_grounds_jsp/worlds/: test_scenario_1.world  test_scenario_1_v2.world  test_scenario_2.world  test_scenario_3.world
