<?xml version="1.0"?>
<package format="2">
  <name>speed_controller_jsp</name>
  <version>0.0.1</version>
  <description>The speed_controller_jsp package</description>

  <author>Markus Erik Sügis</author>
  <maintainer email="markus.sugis@gmail.com">Markus Erik Sügis</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
